allow offline stores > 4GB, bug 532323, r=neil, sr=standard8